--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,8 @@ addons:
             - g++-5
             - libboost-test-dev
 
+before_script:
+    - export CXX="g++-5" CC="gcc-5"
+
 script:
     - make test
