--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
 language: c++
 
-# Use Trusty for more recent Boost library
-# https://docs.travis-ci.com/user/trusty-ci-environment/
-sudo: required
-dist: trusty
+sudo: false
 
 addons:
     apt:
@@ -12,10 +9,12 @@ addons:
         packages:
             - make
             - g++-5
-            - libboost-test-dev
 
 before_script:
     - export CXX="g++-5" CC="gcc-5"
+    - ls -la /usr/local
+    - id
+    - touch /usr/local/test
 
 script:
     - make test
