--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,19 @@ addons:
             - make
             - g++-5
 
-before_script:
+before_install:
     # Use GCC 5
     - export CXX="g++-5" CC="gcc-5"
+
+install:
     # Install Boost 1.61
+    - pwd # debug
     - wget https://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.tar.bz2
     - tar --bzip2 -xf boost_1_61_0.tar.bz2
-    - ./boost_1_61_0/bootstrap.sh
+    - cd boost_1_61_0
+    - ./bootstrap.sh
     - sudo ./boost_1_61_0/b2 install
+    - cd ..
     - sudo ldconfig
 
 script:
