--- a/.travis.yml
+++ b/.travis.yml
@@ -16,14 +16,14 @@ before_install:
 
 install:
     # Install Boost 1.61
-    - pwd # debug
+    - cd ..
     - wget https://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.tar.bz2
     - tar --bzip2 -xf boost_1_61_0.tar.bz2
     - cd boost_1_61_0
     - ./bootstrap.sh
-    - sudo ./boost_1_61_0/b2 install
-    - cd ..
+    - sudo ./b2 install
     - sudo ldconfig
+    - cd ../BFGenerator
 
 script:
     - make test
