Use "update-alternatives" to set GCC 5.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,14 @@ addons:
 
 before_install:
     # Use GCC 5
-    - export CXX="g++-5" CC="gcc-5"
+    - sudo update-alternatives --remove-all gcc
+    - sudo update-alternatives --remove-all g++
+    - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-5 10
+    - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 10
+    - sudo update-alternatives --install /usr/bin/cc  cc  /usr/bin/gcc   20
+    - sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/g++   20
+    - sudo update-alternatives --set cc  /usr/bin/gcc
+    - sudo update-alternatives --set c++ /usr/bin/g++
 
 install:
     # Install Boost 1.61
