--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
     - tar --bzip2 -xf boost_1_61_0.tar.bz2
     - cd boost_1_61_0
     - ./bootstrap.sh
-    - sudo ./b2 install
+    - sudo ./b2 -d0 install
     - sudo ldconfig
     - cd ../BFGenerator
 
