--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ install:
     - tar --bzip2 -xf boost_1_61_0.tar.bz2
     - cd boost_1_61_0
     - ./bootstrap.sh
-    - sudo ./b2 -d0 install
+    - travis_wait 30 sudo ./b2 -d0 install
     - sudo ldconfig
     - cd ../BFGenerator
 
