--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ addons:
             - make
             - g++-5
             - libboost-test-dev
+            - libboost-program-options-dev
 
 before_script:
     - export CXX="g++-5" CC="gcc-5"
