--- a/Solution/CompilerTests/CompilerTests.vcxproj.filters
+++ b/Solution/CompilerTests/CompilerTests.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="..\..\bf\compiler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\bf\ast.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\bf\compiler.cpp">
