--- a/Solution/Compiler/Compiler.vcxproj.filters
+++ b/Solution/Compiler/Compiler.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="..\..\bf\compiler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\bf\instruction_visitor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\bf\expression_visitor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\bf\compiler.h">
@@ -36,6 +42,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\bf\ast.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\bf\expression_visitor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\bf\instruction_visitor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
