--- a/Solution/Compiler/Compiler.vcxproj
+++ b/Solution/Compiler/Compiler.vcxproj
@@ -134,13 +134,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\bf\compiler.cpp" />
+    <ClCompile Include="..\..\bf\expression_visitor.cpp" />
     <ClCompile Include="..\..\bf\frontend.cpp" />
     <ClCompile Include="..\..\bf\generator.cpp" />
+    <ClCompile Include="..\..\bf\instruction_visitor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\bf\ast.h" />
     <ClInclude Include="..\..\bf\compiler.h" />
+    <ClInclude Include="..\..\bf\expression_visitor.h" />
     <ClInclude Include="..\..\bf\generator.h" />
+    <ClInclude Include="..\..\bf\instruction_visitor.h" />
     <ClInclude Include="..\..\bf\scope_exit.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
