--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ install:
     - wget https://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.tar.bz2
     - tar --bzip2 -xf boost_1_61_0.tar.bz2
     - cd boost_1_61_0
-    - ./bootstrap.sh
-    - travis_wait 30 sudo ./b2 -d0 install
+    - ./bootstrap.sh --with-libraries=program_options,test
+    - sudo ./b2 -d0 install
     - sudo ldconfig
     - cd ../BFGenerator
 
