--- a/Solution/Compiler/Compiler.vcxproj.filters
+++ b/Solution/Compiler/Compiler.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="..\..\bf\ast_types.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\bf\error_handler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
