--- a/Solution/CompilerTests/CompilerTests.vcxproj.filters
+++ b/Solution/CompilerTests/CompilerTests.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="..\..\bf\ast_types.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\bf\error_handler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\bf\compiler.cpp">
