--- a/Solution/Compiler/Compiler.vcxproj.filters
+++ b/Solution/Compiler/Compiler.vcxproj.filters
@@ -53,5 +53,14 @@
     <ClInclude Include="..\..\bf\error_handler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\bf\instruction_grammar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\bf\expression_grammar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\bf\skipper_grammar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
