--- a/Solution/CompilerTests/CompilerTests.vcxproj.filters
+++ b/Solution/CompilerTests/CompilerTests.vcxproj.filters
@@ -39,6 +39,15 @@
     <ClInclude Include="..\..\bf\error_handler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\bf\instruction_grammar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\bf\expression_grammar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\bf\skipper_grammar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\bf\compiler.cpp">
