--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ build:
   before_script:
     - apt-get update
     - apt-get install -y make g++
+    - apt-get install -y libboost-dev libboost-test-dev
   script:
     - make && ./bin/bfc --version
     - make test
