--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,10 +2,22 @@ image: ubuntu:20.04
 
 build:
   stage: build
-  before_script:
+    before_script:
     - apt-get update
     - apt-get install -y make g++
-    - apt-get install -y libboost-dev libboost-test-dev
+    - apt-get install -y libboost-dev libboost-program-options-dev
   script:
     - make && ./bin/bfc --version
+
+test:
+  stage: test
+  before_script:
+    - apt-get update
+    - apt-get install -y make g++ gcovr
+    - apt-get install -y libboost-test-dev
+  script:
     - make test
+    - gcovr --xml-pretty --exclude-unreachable-branches --print-summary -o coverage.xml --root ${CI_PROJECT_DIR}
+  artifacts:
+    reports:
+      cobertura: coverage.xml
