--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ image: ubuntu:20.04
 build:
   stage: build
   before_script:
+    - export DEBIAN_FRONTEND=noninteractive
     - apt-get update
     - apt-get install -y make g++
     - apt-get install -y libboost-dev libboost-program-options-dev
@@ -12,6 +13,7 @@ build:
 test:
   stage: test
   before_script:
+    - export DEBIAN_FRONTEND=noninteractive
     - apt-get update
     - apt-get install -y make g++ gcovr
     - apt-get install -y libboost-test-dev
